--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 server.contextPath=/demo
-spring.datasource.url=jdbc:mysql://localhost:3306/springangular
+spring.datasource.url=jdbc:mysql://localhost:3306/gestionmascotas
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
